apply plugin: 'java-library'
apply plugin: 'idea'

repositories {
  mavenCentral()
}

ext {
  domaVersion = '2.17.0'
}

sourceCompatibility = JavaVersion.VERSION_1_9
targetCompatibility = JavaVersion.VERSION_1_9

tasks.withType(JavaCompile) {
  it.options.encoding = 'UTF-8'
}

dependencies {
  compile project('data')
  compile group: 'mysql', name: 'mysql-connector-java', version: '6.0.6'
  compile group: 'com.google.inject', name: 'guice', version: '4.1.0'
  compile group: 'com.atomikos', name: 'transactions-jta', version: '4.0.4'
  compile group: 'com.atomikos', name: 'transactions-jdbc', version: '4.0.4'
  compile group: 'javax.transaction', name: 'jta', version: '1.1'
  testCompile "junit:junit:4.12"
}

task showSourceDirs {
    doLast {
        println(idea.module.sourceDirs)
    }
}

project('data') {
  apply plugin: 'java-library'
  apply plugin: 'idea'

  repositories {
    mavenCentral()
  }

  dependencies {
    compile "org.seasar.doma:doma:${domaVersion}"
    compile group: 'javax.inject', name: 'javax.inject', version: '1'
    compile group: 'org.eclipse.collections', name: 'eclipse-collections', version: '9.0.0'
    testCompile "junit:junit:4.12"
  }
  compileJava.dependsOn processResources
  processResources.destinationDir = compileJava.destinationDir

  idea.module {
    inheritOutputDirs = true
    sourceDirs += project.file("src/main/generated_main")
  }

  compileJava {
    options.compilerArgs += ['--add-modules', 'java.xml.ws.annotation']
  }
}
